Fix icon alignment and remove icons for description on mobile

--- a/src/app/theme/theme_additions.css
+++ b/src/app/theme/theme_additions.css
@@ -53,3 +53,7 @@ a:hover {
 .m-details {
   display: flex;
 }
+
+.infoblock:first-child {
+  padding-left: 0;
+}
